--- a/app/src/main/res/layout/fragment_home_buyer.xml
+++ b/app/src/main/res/layout/fragment_home_buyer.xml
@@ -109,6 +109,33 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_margin="16dp">
+
+                <TextView
+                    android:id="@+id/label_recommended_products"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Recommended Products"
+                    android:textSize="18sp"
+                    android:layout_weight="1"/>
+
+                <TextView
+                    android:id="@+id/text_see_all_recommended"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="See All"
+                    android:textColor="@color/colorAccent"
+                    android:layout_gravity="end"/>
+            </LinearLayout>
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/viewPager_recommended_products"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/viewpager_background"/>
             <!-- Central Components -->
             <LinearLayout
                 android:layout_width="match_parent"
