--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -40,6 +40,12 @@
     <color name="fragment_background">#FFFFFF</color>
 
     <color name="darkgray">#A9A9A9</color>
+    <color name="dark_gray">#707070</color>
+
+
+    <color name="light_gray">#F5F5F5</color>
+
+    <color name="primary">#FF5722</color>
 
 
 </resources>
