--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -47,5 +47,8 @@
 
     <color name="primary">#FF5722</color>
 
+    <color name="primaryColor">#6200EE</color> <!-- Change to your desired color -->
+
+
 
 </resources>
