--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -48,6 +48,8 @@
     <color name="primary">#FF5722</color>
 
     <color name="primaryColor">#6200EE</color> <!-- Change to your desired color -->
+    <color name="gray">#757575</color>
+
 
 
 
