--- a/app/src/main/res/layout/item_recommend_local_shop.xml
+++ b/app/src/main/res/layout/item_recommend_local_shop.xml
@@ -20,6 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
+        android:maxLines="1"
         android:textSize="18sp"
         android:layout_marginTop="8dp" />
 
@@ -35,6 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="14sp"
+        android:maxLines="1"
         android:layout_marginTop="4dp" />
 
     <TextView
@@ -44,11 +46,5 @@
         android:textSize="14sp"
         android:layout_marginTop="4dp" />
 
-    <Button
-        android:id="@+id/contactButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Contact"
-        android:layout_marginTop="8dp" />
 
 </LinearLayout>
