--- a/app/src/main/res/layout/fragment_home_seller.xml
+++ b/app/src/main/res/layout/fragment_home_seller.xml
@@ -110,6 +110,7 @@
             android:textColor="@android:color/black"
             android:padding="10dp"
             android:textSize="16sp"
+            android:gravity="center"
             android:clickable="true"
             android:focusable="true" />
 
@@ -124,6 +125,19 @@
             android:padding="10dp"
             android:textSize="16sp"
             android:clickable="true"
+            android:gravity="center"
+            android:focusable="true" />
+        <TextView
+            android:id="@+id/find_services"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="WTF IS THIS"
+            android:textColor="@android:color/black"
+            android:padding="10dp"
+            android:textSize="16sp"
+            android:clickable="true"
+            android:gravity="center"
             android:focusable="true" />
 
     </LinearLayout>
