--- a/app/src/main/res/layout/item_local_trend.xml
+++ b/app/src/main/res/layout/item_local_trend.xml
@@ -1,15 +1,14 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<LinearLayout android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="8dp"
     android:background="@drawable/card_background"
     android:elevation="4dp"
-    android:layout_margin="8dp">
+    android:layout_margin="8dp"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ImageView
-        android:id="@+id/product_image"
+        android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:scaleType="centerCrop"
@@ -22,46 +21,31 @@
         android:padding="8dp">
 
         <TextView
-            android:id="@+id/product_title"
+            android:id="@+id/nameTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
             android:textSize="16sp"
             android:maxLines="1"
-            android:ellipsize="end"
             android:paddingTop="4dp"/>
 
         <TextView
-            android:id="@+id/product_price"
+            android:id="@+id/placeTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:textColor="@android:color/holo_red_dark"
-            android:paddingTop="2dp"/>
+            android:textSize="14sp"/>
 
         <TextView
-            android:id="@+id/product_condition"
+            android:id="@+id/ratingsTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="12sp"
-            android:textColor="@android:color/darker_gray"
-            android:paddingTop="2dp"/>
+            android:textSize="14sp"/>
 
         <TextView
-            android:id="@+id/product_rated"
+            android:id="@+id/soldTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="12sp"
-            android:textColor="@android:color/darker_gray"
-            android:paddingTop="2dp"/>
-
-        <TextView
-            android:id="@+id/product_discount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="12sp"
-            android:textColor="@android:color/holo_green_dark"
-            android:paddingTop="2dp"/>
+            android:textSize="14sp"/>
     </LinearLayout>
 
 </LinearLayout>
