--- a/app/src/main/res/layout/item_recommend_local_shop.xml
+++ b/app/src/main/res/layout/item_recommend_local_shop.xml
@@ -46,5 +46,13 @@
         android:textSize="14sp"
         android:layout_marginTop="4dp" />
 
+    <TextView
+        android:id="@+id/distance"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="14sp"
+        android:layout_marginTop="4dp" />
+
+
 
 </LinearLayout>
