--- a/app/src/main/res/layout/item_towing.xml
+++ b/app/src/main/res/layout/item_towing.xml
@@ -26,7 +26,7 @@
         android:paddingBottom="4dp"/>
 
     <TextView
-        android:id="@+id/towingKindOfService"
+        android:id="@+id/serviceKind"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="14sp"
