--- a/app/src/main/res/layout/activity_service_detail.xml
+++ b/app/src/main/res/layout/activity_service_detail.xml
@@ -105,6 +105,7 @@
             android:layout_height="wrap_content"
             android:text="See All"
             android:textColor="@android:color/holo_blue_dark"
+            android:visibility="gone"
             />
     </LinearLayout>
 
