--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,153 +1,146 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:fitsSystemWindows="true"
     tools:context=".Login">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingStart="20dp"
-        android:paddingEnd="20dp"
-        android:paddingTop="50dp"
-        android:paddingBottom="20dp">
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
-        <TextView
-            android:id="@+id/tv1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-black"
-            android:textSize="28sp"
-            android:textFontWeight="900"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:text="GearUp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"/>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/imageView1"
-            android:layout_width="150dp"
-            android:layout_height="130dp"
-            app:cardCornerRadius="100dp"
-            app:layout_constraintTop_toBottomOf="@id/tv1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            android:layout_marginTop="30dp">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="fitXY"
-                app:srcCompat="@drawable/automotive"/>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cv1"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="20dp"
-            app:layout_constraintTop_toBottomOf="@id/imageView1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="20dp">
+            android:orientation="vertical"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
+            android:paddingTop="50dp"
+            android:paddingBottom="20dp">
 
-            <EditText
-                android:id="@+id/email"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:background="@color/white"
-                android:drawableStart="@drawable/user"
-                android:fontFamily="serif-monospace"
-                android:hint="Username"
-                android:imeOptions="actionNext"
-                android:inputType="textEmailAddress"
-                android:paddingStart="20dp"
-                android:paddingEnd="20dp"
-                android:textAlignment="center"
-                android:textColor="#FF000000"
-                android:textColorHint="#FF000000"
-                android:textSize="18sp"
-                android:textStyle="bold"/>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cv2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardCornerRadius="20dp"
-            app:layout_constraintTop_toBottomOf="@id/cv1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-             android:layout_marginTop="10dp">
-
-            <EditText
-                android:id="@+id/password"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:fontFamily="serif-monospace"
-                android:paddingStart="20dp"
-                android:paddingEnd="20dp"
-                android:imeOptions="actionNext"
-                android:hint="Password"
-                android:textColorHint="#FF000000"
+            <TextView
+                android:id="@+id/tv1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-black"
+                android:textSize="28sp"
+                android:textFontWeight="900"
+                android:textColor="@color/black"
                 android:textStyle="bold"
-                android:textAlignment="center"
-                android:textColor="#FF000000"
-                android:background="@color/white"
-                android:drawableStart="@drawable/lock"
-                android:inputType="textPassword"
-                android:textSize="18sp"/>
-        </androidx.cardview.widget.CardView>
+                android:text="GearUp"
+                android:layout_gravity="center"/>
 
-        <TextView
-            android:id="@+id/titleText1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Forgot Password?"
-            android:textSize="12sp"
-            android:textColor="@android:color/black"
-            app:layout_constraintTop_toBottomOf="@id/cv2"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="10dp"/>
+            <androidx.cardview.widget.CardView
+                android:id="@+id/imageView1"
+                android:layout_width="150dp"
+                android:layout_height="130dp"
+                app:cardCornerRadius="100dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="30dp">
 
-        <TextView
-            android:id="@+id/newAccount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="New Account?"
-            android:textSize="12sp"
-            android:textColor="@android:color/black"
-            app:layout_constraintTop_toBottomOf="@id/cv2"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            android:layout_marginTop="10dp"/>
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="fitXY"
+                    app:srcCompat="@drawable/automotive"/>
+            </androidx.cardview.widget.CardView>
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/loginbtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-medium"
-            android:layout_marginTop="40dp"
-            android:backgroundTint="#FF018786"
-            android:background="@drawable/password_btn"
-            android:text="LOGIN"
-            android:textAllCaps="true"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            android:textColor="@color/white"
-            app:layout_constraintTop_toBottomOf="@id/newAccount"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"/>
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cv1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="20dp"
+                android:layout_marginTop="20dp">
 
+                <EditText
+                    android:id="@+id/email"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:background="@color/white"
+                    android:drawableStart="@drawable/user"
+                    android:fontFamily="serif-monospace"
+                    android:hint="Username"
+                    android:imeOptions="actionNext"
+                    android:inputType="textEmailAddress"
+                    android:paddingStart="20dp"
+                    android:paddingEnd="20dp"
+                    android:textAlignment="center"
+                    android:textColor="#FF000000"
+                    android:textColorHint="#FF000000"
+                    android:textSize="18sp"
+                    android:textStyle="bold"/>
+            </androidx.cardview.widget.CardView>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cv2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="20dp"
+                android:layout_marginTop="10dp">
+
+                <EditText
+                    android:id="@+id/password"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:fontFamily="serif-monospace"
+                    android:paddingStart="20dp"
+                    android:paddingEnd="20dp"
+                    android:imeOptions="actionNext"
+                    android:hint="Password"
+                    android:textColorHint="#FF000000"
+                    android:textStyle="bold"
+                    android:textAlignment="center"
+                    android:textColor="#FF000000"
+                    android:background="@color/white"
+                    android:drawableStart="@drawable/lock"
+                    android:inputType="textPassword"
+                    android:textSize="18sp"/>
+            </androidx.cardview.widget.CardView>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp">
+
+                <TextView
+                    android:id="@+id/titleText1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Forgot Password?"
+                    android:textSize="12sp"
+                    android:textColor="@android:color/black"
+                    android:gravity="start"/>
+
+                <TextView
+                    android:id="@+id/newAccount"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="New Account?"
+                    android:textSize="12sp"
+                    android:textColor="@android:color/black"
+                    android:gravity="end"/>
+            </LinearLayout>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/loginbtn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-medium"
+                android:layout_marginTop="40dp"
+                android:backgroundTint="#FF018786"
+                android:background="@drawable/password_btn"
+                android:text="LOGIN"
+                android:textAllCaps="true"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                android:textColor="@color/white"/>
+        </LinearLayout>
+    </ScrollView>
+</LinearLayout>
