--- a/app/src/main/res/layout/activity_recommended_services.xml
+++ b/app/src/main/res/layout/activity_recommended_services.xml
@@ -1,21 +1,36 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp"
-    tools:context=".RecommendedServicesActivity">
+    android:fitsSystemWindows="true"
+    android:background="@android:color/background_light">
 
-    <TextView
-        android:id="@+id/recommendedServicesTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Recommended Services"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:layout_marginBottom="8dp" />
+    <!-- Toolbar with Back Button and Centered Title -->
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@android:color/holo_blue_light"
+        app:title="Recommended Services"
+        app:titleTextColor="@android:color/white"
+        app:navigationIcon="@drawable/ic_back_white"
+        android:elevation="4dp" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:fillViewport="true">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="16dp"
+            android:background="@android:color/background_light">
+
 
     <TextView
         android:id="@+id/predictionView"
@@ -32,4 +47,6 @@
         android:layout_weight="1"
         android:scrollbars="vertical"/>
 
+</LinearLayout>
+    </ScrollView>
 </LinearLayout>
