--- a/app/src/main/res/layout/activity_video_results.xml
+++ b/app/src/main/res/layout/activity_video_results.xml
@@ -4,8 +4,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp"
+    android:fitsSystemWindows="true"
     android:background="@android:color/background_light">
+
+    <!-- Toolbar with Back Button and Centered Title -->
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@android:color/holo_blue_light"
+        app:title="Watch Recommended Videos"
+        app:titleTextColor="@android:color/white"
+        app:navigationIcon="@drawable/ic_back_white"
+        android:elevation="4dp" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="16dp"
+            android:background="@android:color/background_light">
 
     <!-- Header Section -->
     <TextView
@@ -49,4 +72,6 @@
             android:background="@android:color/white" />
     </androidx.cardview.widget.CardView>
 
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
