--- a/app/src/main/res/layout/fragment_shops.xml
+++ b/app/src/main/res/layout/fragment_shops.xml
@@ -13,8 +13,9 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp"
+        android:padding="10dp"
         android:gravity="center_vertical"
+        android:background="@android:color/holo_blue_light"
         tools:ignore="MissingConstraints">
 
         <!-- Back Button -->
@@ -22,7 +23,7 @@
             android:id="@+id/btn_back"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:src="@drawable/ic_back"
+            android:src="@drawable/ic_back_white"
             android:contentDescription="Back"
             android:layout_marginEnd="10dp"
             android:background="?android:attr/selectableItemBackground"
